Create basic model checking theory

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -32,8 +32,8 @@ COQMF_METAFILE =
 
 COQMF_OCAMLLIBS = 
 COQMF_SRC_SUBDIRS = 
-COQMF_COQLIBS =   -R Zfc Matematica
-COQMF_COQLIBS_NOML =  -R Zfc Matematica
+COQMF_COQLIBS =   -R Zfc Matematica -R Lambda Matematica -R Model Matematica
+COQMF_COQLIBS_NOML =  -R Zfc Matematica -R Lambda Matematica -R Model Matematica
 COQMF_CMDLINE_COQLIBS =   
 
 ###############################################################################
